fix: address code review feedback
- Upgrade Spring Boot 3.2.0 → 3.2.12 for security patches
- Remove hardcoded JWT secret default; require JWT_SECRET env var
- Restrict CORS allowed origins via cors.allowed-origins config property
- Add null/auth check in SecurityUtils.getCurrentUserId()
- Guard SprintHealthService against zero/negative sprint duration

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>